--- a/tools/echo-client/CMakeLists.txt
+++ b/tools/echo-client/CMakeLists.txt
@@ -4,6 +4,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(echocli)
 AUX_SOURCE_DIRECTORY(. SRCS)
 
+SET(CMAKE_BUILD_TYPE "Debug")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+INCLUDE_DIRECTORIES(../../lib/include)
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
