listener_close/listener_init/listener_open ok

--- a/tools/srpc_async_server/CMakeLists.txt
+++ b/tools/srpc_async_server/CMakeLists.txt
@@ -9,4 +9,8 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 INCLUDE_DIRECTORIES(../../lib/include)
 
+# LINK_DIRECTORIES只影响它后面声明的编译对象TARGET
+LINK_DIRECTORIES( $ENV{OB_REL}/lib )
 ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
+
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} symx)
