--- a/tools/echo-server/CMakeLists.txt
+++ b/tools/echo-server/CMakeLists.txt
@@ -8,4 +8,8 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 INCLUDE_DIRECTORIES(../../lib/include)
 
+LINK_DIRECTORIES( $ENV{OB_REL}/lib )
+
 ADD_EXECUTABLE(${PROJECT_NAME} echo-server.cpp)
+
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} symx)
