--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -11,6 +11,7 @@ AUX_SOURCE_DIRECTORY(./src/nio SRCS_NIO)
 
 ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS_NIO})
 
-INSTALL (TARGETS ${PROJECT_NAME})
+INSTALL (TARGETS ${PROJECT_NAME}
+         LIBRARY DESTINATION lib)
 
 SET(CMAKE_INSTALL_PREFIX $ENV{OB_REL})
