remove linke libsymx from srpc async server

--- a/tools/srpc_async_server/CMakeLists.txt
+++ b/tools/srpc_async_server/CMakeLists.txt
@@ -13,4 +13,4 @@ INCLUDE_DIRECTORIES(../../lib/include)
 LINK_DIRECTORIES( $ENV{OB_REL}/lib )
 ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
 
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} symx)
+#TARGET_LINK_LIBRARIES(${PROJECT_NAME} symx)
