--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@
 *.exe
 *.out
 *.app
+
+# generated temporary dirs & files
+doc/
+.vscode/
+CMakeFiles/
+Makefile
+CMakeCache.txt
+*.cmake
+install_manifest.txt
