delete unused code files

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -7,9 +7,9 @@ SET(CMAKE_BUILD_TYPE "Debug")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 INCLUDE_DIRECTORIES(include)
-AUX_SOURCE_DIRECTORY(./src/nio SRCS_NIO)
+AUX_SOURCE_DIRECTORY(./src SRCS)
 
-ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS_NIO})
+ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
 
 INSTALL (TARGETS ${PROJECT_NAME}
          LIBRARY DESTINATION lib)
